--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     "firebase/auth": "https://aistudiocdn.com/firebase@^12.5.0/auth",
     "firebase/database": "https://aistudiocdn.com/firebase@^12.5.0/database",
     "firebase/analytics": "https://aistudiocdn.com/firebase@^12.5.0/analytics",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
